tests/fail/cap_struct.stderr
error: expected type, found `}`
 --> tests/fail/cap_struct.rs:6:1
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected type
  |
  = note: this error originates in the attribute macro `capabilities` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CapService: CapabilityTrait<capabilities::Delete<Orders>>` is not satisfied
 --> tests/fail/cap_struct.rs:6:38
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  |                                      ^^^^^^ the trait `CapabilityTrait<capabilities::Delete<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CapDeleteOrders`
 --> tests/fail/cap_struct.rs:6:1
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CapDeleteOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CapService: CapabilityTrait<capabilities::Update<Orders>>` is not satisfied
 --> tests/fail/cap_struct.rs:6:30
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  |                              ^^^^^^ the trait `CapabilityTrait<capabilities::Update<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CapUpdateOrders`
 --> tests/fail/cap_struct.rs:6:1
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CapUpdateOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CapService: CapabilityTrait<capabilities::Read<Orders>>` is not satisfied
 --> tests/fail/cap_struct.rs:6:24
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  |                        ^^^^ the trait `CapabilityTrait<capabilities::Read<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CapReadOrders`
 --> tests/fail/cap_struct.rs:6:1
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CapReadOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CapService: CapabilityTrait<capabilities::Create<Orders>>` is not satisfied
 --> tests/fail/cap_struct.rs:6:16
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  |                ^^^^^^ the trait `CapabilityTrait<capabilities::Create<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CapCreateOrders`
 --> tests/fail/cap_struct.rs:6:1
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CapCreateOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)
